--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,32 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header class="navbar navbar-fixed-top navbar-default">
-    <div class="container">
-      <%= link_to "Recipes", "", class: "btn btn-lg btn-success", id:"logo" %>
-      <div class="nav_item">
-        <%=link_to "link1", "", class: "btn btn-default btn-morning" %>
-      </div>
-      
-       <div class="nav_item">
-        <%=link_to "link2", "", class: "btn btn-default btn-morning" %>
-      </div>
-      
-       <div class="nav_item">
-        <%=link_to "link3", "", class: "btn btn-default btn-morning" %>
-      </div>
-   
-    </div>
-    
-  </header>
+  
+  <%= render 'layouts/navigation' %>
   
   <div class="container">
     <%= yield %>
   </div> 
   
-  <div class="footer">
-    <p>Copyright &copy; 2015 Recipes.com Term of use </p>
-  </div>
+  <%= render 'layouts/footer' %>
   
 </body>
 </html>
